archive/history/debug_error.txt
node : C:\Users\Quencher\.gemini\antigravity
\scratch\sovereign-repos\Project-AI\src\thir
sty_lang\src\doc-generator.js:62
At line:1 char:1
+ node src/thirsty_lang/src/thirsty-cli.js 
run src/thirsty_lang/example ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: 
    (C:\Users\Quench...generator.js:62:Str  
  ing) [], RemoteException
    + FullyQualifiedErrorId : NativeCommand 
   Error
 
      });
       ^

SyntaxError: Unexpected token ')'
    at wrapSafe 
(node:internal/modules/cjs/loader:1742:18)
    at Module._compile 
(node:internal/modules/cjs/loader:1785:20)
    at Object..js 
(node:internal/modules/cjs/loader:1942:10)
    at Module.load 
(node:internal/modules/cjs/loader:1532:32)
    at Module._load 
(node:internal/modules/cjs/loader:1334:12)
    at wrapModuleLoad 
(node:internal/modules/cjs/loader:255:19)
    at Module.require 
(node:internal/modules/cjs/loader:1555:12)
    at require 
(node:internal/modules/helpers:152:16)
    at Object.<anonymous> (C:\Users\Quencher
\.gemini\antigravity\scratch\sovereign-repos
\Project-AI\src\thirsty_lang\src\thirsty-cli
.js:20:8)
    at Module._compile 
(node:internal/modules/cjs/loader:1811:14)

Node.js v25.6.1
